<resources>
    <string name="app_name">AI Chat</string>
    <string name="title_settings">Settings</string>
    <string name="hint_message">Type a message...</string>
    <string name="send">Send</string>
    <string name="stop">Stop</string>
    <string name="settings">Settings</string>
    <string name="select_model">Select AI Model</string>
    <string name="manage_mcp">Manage MCP</string>
    <string name="manage_tools">Manage Tools</string>
    <string name="loading">Loading...</string>
    <string name="register">Register</string>
    <string name="uninstall">Uninstall</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
</resources>
